# AI_blueprint_gen

./: .gitignore  README.md  WARP.md  pyproject.toml
backend/analysis/: facade.py  mep.py  structure.py
backend/api/: main.py
backend/core/: orchestrator.py
backend/datasets/: anonymize.py  augment.py  importers.py  schema.py  synthetic.py
backend/dimensioning/: dim.py
backend/export/: dxf.py  ifc.py  schedules.py  service.py  svg.py
backend/geometry/: openings.py  stairs.py
backend/interaction/: prefs.py  service.py
backend/learned/: critic.py  parser.py  placement.py  proposal.py  topology.py
backend/models/: graphs.py  scene.py  schema.py  units.py
backend/pathfinding/: astar.py
backend/qa/: human_eval.py  metrics.py  regression.py
backend/retrieval/: library.py
backend/rules/: catalog.py  dsl.py  engine.py  loader.py
backend/solver/: costs.py  cpsat.py  packing.py  refine.py  solver.py
briefs/: 2bed_1bath.json  3bed_2bath.json  baseline_again.json  compact_studio_1bed.json  multi_story_2bed.json  narrow_lot_2bed.json  square_plan_2bed.json  with_corridor.json
docs/: architecture.md
tests/: test_no_overlap.py
