[project]
name = "house-blueprint-ai"
version = "0.1.0"
description = "AI that converts user parameters into code-compliant house blueprints"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "networkx>=3.2.0",
  "shapely>=2.0.0",
  "ortools>=9.10.0"
]

[tool.uvicorn]
reload = true

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
